--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     margin-bottom: 3vh;
     width: 44vw;
     height: 5vh;
-    font-size: 20px;
+    font-size: 4vw;
     font-family: "Tahoma";
     text-align: center;
     font-weight: bold;
