--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     margin-right: 1vw;
     margin-bottom: 3vh;
     width: 44vw;
-    height: 5vh;
+    padding: 1vh;
     font-size: 4vw;
     font-family: "Tahoma";
     text-align: center;
